fix and new features